[gd_scene load_steps=104 format=3 uid="uid://b3totobanahjr"]

[ext_resource type="Script" path="res://attacks/hitbox.gd" id="1_1k7qj"]
[ext_resource type="Script" path="res://player/player.gd" id="1_yh1rm"]
[ext_resource type="Script" path="res://player/hit_relay.gd" id="2_0v2n8"]
[ext_resource type="Texture2D" uid="uid://cmvwmwc4mm6hl" path="res://player/sprite_sheets/IMG_2407.PNG" id="3_j4wr0"]
[ext_resource type="Texture2D" uid="uid://bt3hh7vw82qmn" path="res://player/sprite_sheets/IMG_2406.PNG" id="3_r6tpa"]
[ext_resource type="Texture2D" uid="uid://mls2a2hnl31h" path="res://player/sprite_sheets/dead-sprite-34x34.png" id="3_uh851"]
[ext_resource type="Script" path="res://player/sprite.gd" id="4_jvh8l"]
[ext_resource type="Script" path="res://attacks/hitshaker.gd" id="4_oeryd"]
[ext_resource type="Script" path="res://attacks/hitdealer.gd" id="6_kfu7e"]
[ext_resource type="PackedScene" uid="uid://cxf4uyoe085n7" path="res://oink_mode/da_pig.tscn" id="7_i5r24"]
[ext_resource type="AudioStream" uid="uid://cv075sli5cynk" path="res://player/Ghost_Atk_01_v3.wav" id="8_y5e86"]
[ext_resource type="AudioStream" uid="uid://cyhdgh0cqs0g6" path="res://sounds/Ghost_GetHit_v1_01.wav" id="9_3vrnw"]
[ext_resource type="AudioStream" uid="uid://dticjw7piq3il" path="res://player/Ghost_Atk_02_v3.wav" id="9_apcff"]
[ext_resource type="AudioStream" uid="uid://clthjbnlyd5g8" path="res://player/Ghost_Atk_03_v3.wav" id="10_7xnpg"]
[ext_resource type="AudioStream" uid="uid://bwd7thkje0d2u" path="res://sounds/Ghost_GetHit_v1_02.wav" id="10_gourf"]
[ext_resource type="AudioStream" uid="uid://psnwfm4kg5i7" path="res://sounds/Ghost_GetHit_v1_03.wav" id="11_hnhjs"]
[ext_resource type="AudioStream" uid="uid://f4xd5rebe3qk" path="res://player/dash.wav" id="12_vgafv"]
[ext_resource type="Script" path="res://attacks/autotargeter.gd" id="13_d721y"]
[ext_resource type="Texture2D" uid="uid://cf804rn203pgy" path="res://player/scare_recharge_particle.png" id="13_gnlxp"]
[ext_resource type="Texture2D" uid="uid://d4ce5v7lpwtyc" path="res://player/small_crosshair.png" id="13_opc0u"]
[ext_resource type="Texture2D" uid="uid://ti5h4007h5ni" path="res://player/crosshair.png" id="13_scdd2"]
[ext_resource type="Script" path="res://player/crunch_sound.gd" id="18_mmomh"]
[ext_resource type="AudioStream" uid="uid://mvxohcwgelgi" path="res://sounds/Ghost_Crunch_Impact_v2_06.wav" id="18_vtinq"]
[ext_resource type="AudioStream" uid="uid://c3eywt6lv73he" path="res://sounds/Ghost_Crunch_Impact_v2_04.wav" id="19_dskt2"]
[ext_resource type="AudioStream" uid="uid://c42whb5demln" path="res://sounds/Ghost_Crunch_Impact_v2_03.wav" id="20_qgqoq"]
[ext_resource type="AudioStream" uid="uid://d0qoy6r67bofu" path="res://sounds/Ghost_Crunch_Impact_v2_02.wav" id="21_pjroc"]
[ext_resource type="AudioStream" uid="uid://c4l1cqwol3soa" path="res://sounds/Ghost_Crunch_Impact_v2_01.wav" id="22_taggm"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_dwpj8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j6nl2"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2i8e"]
size = Vector2(20, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5udl"]
atlas = ExtResource("3_uh851")
region = Rect2(0, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_uec42"]
atlas = ExtResource("3_uh851")
region = Rect2(34, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_prwkk"]
atlas = ExtResource("3_uh851")
region = Rect2(68, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4n62"]
atlas = ExtResource("3_uh851")
region = Rect2(102, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_llkvs"]
atlas = ExtResource("3_uh851")
region = Rect2(136, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lncl"]
atlas = ExtResource("3_uh851")
region = Rect2(170, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_o011k"]
atlas = ExtResource("3_uh851")
region = Rect2(204, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_466v2"]
atlas = ExtResource("3_uh851")
region = Rect2(238, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_on7c6"]
atlas = ExtResource("3_uh851")
region = Rect2(272, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_p21fv"]
atlas = ExtResource("3_uh851")
region = Rect2(306, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuqne"]
atlas = ExtResource("3_uh851")
region = Rect2(340, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y41q"]
atlas = ExtResource("3_uh851")
region = Rect2(0, 34, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajl7w"]
atlas = ExtResource("3_uh851")
region = Rect2(34, 34, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_106qr"]
atlas = ExtResource("3_uh851")
region = Rect2(68, 34, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ut3a"]
atlas = ExtResource("3_uh851")
region = Rect2(102, 34, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ifne"]
atlas = ExtResource("3_uh851")
region = Rect2(136, 34, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mgji"]
atlas = ExtResource("3_uh851")
region = Rect2(170, 34, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwki6"]
atlas = ExtResource("3_uh851")
region = Rect2(204, 34, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii78e"]
atlas = ExtResource("3_uh851")
region = Rect2(238, 34, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywbh5"]
atlas = ExtResource("3_uh851")
region = Rect2(272, 34, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftsak"]
atlas = ExtResource("3_uh851")
region = Rect2(306, 34, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6l58"]
atlas = ExtResource("3_uh851")
region = Rect2(340, 34, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_qly46"]
atlas = ExtResource("3_r6tpa")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbhx5"]
atlas = ExtResource("3_r6tpa")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykk5s"]
atlas = ExtResource("3_r6tpa")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tgbj"]
atlas = ExtResource("3_r6tpa")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv4ho"]
atlas = ExtResource("3_r6tpa")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjrpm"]
atlas = ExtResource("3_r6tpa")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueume"]
atlas = ExtResource("3_j4wr0")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvej7"]
atlas = ExtResource("3_j4wr0")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yr3k"]
atlas = ExtResource("3_j4wr0")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_deg67"]
atlas = ExtResource("3_j4wr0")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtsai"]
atlas = ExtResource("3_j4wr0")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpel8"]
atlas = ExtResource("3_j4wr0")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_alcgr"]
atlas = ExtResource("3_r6tpa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5b3c"]
atlas = ExtResource("3_r6tpa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0284"]
atlas = ExtResource("3_r6tpa")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm4w2"]
atlas = ExtResource("3_r6tpa")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5fpr"]
atlas = ExtResource("3_r6tpa")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww1pt"]
atlas = ExtResource("3_r6tpa")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qnce"]
atlas = ExtResource("3_r6tpa")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6s3k"]
atlas = ExtResource("3_r6tpa")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqd3r"]
atlas = ExtResource("3_r6tpa")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtr88"]
atlas = ExtResource("3_r6tpa")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0ltl"]
atlas = ExtResource("3_r6tpa")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s52se"]
atlas = ExtResource("3_r6tpa")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf7uo"]
atlas = ExtResource("3_j4wr0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt5ph"]
atlas = ExtResource("3_j4wr0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vbio"]
atlas = ExtResource("3_j4wr0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_juum0"]
atlas = ExtResource("3_j4wr0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nn3e"]
atlas = ExtResource("3_j4wr0")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_02q8u"]
atlas = ExtResource("3_j4wr0")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_drlda"]
atlas = ExtResource("3_r6tpa")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkm6h"]
atlas = ExtResource("3_r6tpa")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ufq"]
atlas = ExtResource("3_r6tpa")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w302y"]
atlas = ExtResource("3_r6tpa")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe801"]
atlas = ExtResource("3_r6tpa")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xwc7"]
atlas = ExtResource("3_r6tpa")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_70lbw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5udl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uec42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prwkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4n62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llkvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lncl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o011k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_466v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_on7c6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p21fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuqne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y41q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajl7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_106qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ut3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ifne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mgji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwki6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii78e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywbh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftsak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6l58")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qly46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbhx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykk5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tgbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv4ho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjrpm")
}],
"loop": true,
"name": &"idle_d",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueume")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yr3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_deg67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtsai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpel8")
}],
"loop": true,
"name": &"idle_lr",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_alcgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5b3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0284")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm4w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5fpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww1pt")
}],
"loop": true,
"name": &"idle_u",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qnce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6s3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqd3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtr88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0ltl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s52se")
}],
"loop": true,
"name": &"move_d",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf7uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt5ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vbio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juum0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nn3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02q8u")
}],
"loop": true,
"name": &"move_lr",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_drlda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkm6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ufq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w302y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe801")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xwc7")
}],
"loop": true,
"name": &"move_u",
"speed": 5.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_w4f1x"]
streams_count = 3
stream_0/stream = ExtResource("9_3vrnw")
stream_1/stream = ExtResource("10_gourf")
stream_2/stream = ExtResource("11_hnhjs")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hl2hw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r03yw"]
radius = 24.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fsin2"]
streams_count = 3
stream_0/stream = ExtResource("8_y5e86")
stream_1/stream = ExtResource("9_apcff")
stream_2/stream = ExtResource("10_7xnpg")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_db3ud"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("12_vgafv")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lv7ck"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(10, 1, 1)
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.2

[sub_resource type="Animation" id="Animation_tr7rn"]
length = 0.001
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}

[sub_resource type="Animation" id="Animation_bdgcl"]
resource_name = "move_up"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1.86607),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(0, -16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ue1s8"]
_data = {
"RESET": SubResource("Animation_tr7rn"),
"move_up": SubResource("Animation_bdgcl")
}

[sub_resource type="Animation" id="Animation_xmdxd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Particles:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Particles:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7md1v"]
resource_name = "move_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Particles:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(0, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Particles:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mvgh8"]
_data = {
"RESET": SubResource("Animation_xmdxd"),
"move_up": SubResource("Animation_7md1v")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_86nth"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_opc0u")
}, {
"duration": 1.0,
"texture": ExtResource("13_scdd2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rvtsr"]
random_pitch = 2.0
random_volume_offset_db = 5.0
streams_count = 5
stream_0/stream = ExtResource("18_vtinq")
stream_1/stream = ExtResource("19_dskt2")
stream_2/stream = ExtResource("20_qgqoq")
stream_3/stream = ExtResource("21_pjroc")
stream_4/stream = ExtResource("22_taggm")

[node name="Player" type="RigidBody2D" groups=["players"]]
y_sort_enabled = true
collision_layer = 3
collision_mask = 3
mass = 1000.0
physics_material_override = SubResource("PhysicsMaterial_dwpj8")
gravity_scale = 0.0
can_sleep = false
lock_rotation = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_yh1rm")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_j6nl2")

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource("1_1k7qj")

[node name="CollisionShape" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_c2i8e")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_70lbw")
animation = &"die"
autoplay = "move_u"
flip_h = true
script = ExtResource("4_jvh8l")

[node name="HitShaker" type="Sprite2D" parent="Sprite"]
script = ExtResource("4_oeryd")

[node name="HitRelay" type="Node" parent="."]
script = ExtResource("2_0v2n8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HitRelay"]
stream = SubResource("AudioStreamRandomizer_w4f1x")
volume_db = 6.0
max_polyphony = 8
bus = &"Effects"

[node name="HitDealer" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("6_kfu7e")

[node name="CollisionShape" type="CollisionShape2D" parent="HitDealer"]
position = Vector2(16, 0)
shape = SubResource("RectangleShape2D_hl2hw")
disabled = true

[node name="DashingCollisionShape" type="CollisionShape2D" parent="HitDealer"]
shape = SubResource("CircleShape2D_r03yw")
disabled = true

[node name="SmallScareSounds" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_fsin2")
max_polyphony = 4
bus = &"Effects"

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_db3ud")
max_polyphony = 4
bus = &"Effects"

[node name="SmallScareRecharge" type="Node2D" parent="."]

[node name="Particles" type="GPUParticles2D" parent="SmallScareRecharge"]
visible = false
position = Vector2(0, 8)
process_material = SubResource("ParticleProcessMaterial_lv7ck")
texture = ExtResource("13_gnlxp")
lifetime = 0.1
randomness = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="SmallScareRecharge"]
root_node = NodePath("../Particles")
libraries = {
"": SubResource("AnimationLibrary_ue1s8")
}

[node name="DashRecharge" type="Node2D" parent="."]
visible = false

[node name="Particles" type="GPUParticles2D" parent="DashRecharge"]
position = Vector2(0, 8)
process_material = SubResource("ParticleProcessMaterial_lv7ck")
texture = ExtResource("13_gnlxp")
lifetime = 0.1
randomness = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="DashRecharge"]
libraries = {
"": SubResource("AnimationLibrary_mvgh8")
}

[node name="AutoTargeter" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("origin_node")]
visible = false
z_index = 1000
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_86nth")
script = ExtResource("13_d721y")
origin_node = NodePath("..")

[node name="CrunchSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_rvtsr")
max_polyphony = 16
bus = &"Effects"
script = ExtResource("18_mmomh")

[node name="CameraSeparator" type="Node" parent="."]

[node name="Camera" type="Camera2D" parent="CameraSeparator"]

[node name="DaPig" parent="." instance=ExtResource("7_i5r24")]
visible = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="hit_landed" from="HitBox" to="HitRelay" method="_on_hit_box_hit_landed"]
[connection signal="animation_finished" from="Sprite" to="HitRelay" method="_on_sprite_animation_finished"]
[connection signal="hit_landed" from="HitDealer" to="." method="_on_hit_dealer_hit_landed"]
[connection signal="hit_landed" from="HitDealer" to="CrunchSound" method="_on_hit_dealer_hit_landed"]
